[gd_scene load_steps=6 format=2]

[ext_resource path="res://editor/TextureSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://editor/visualizers/2D/OrthogonalVisualizer.tscn" type="PackedScene" id=2]
[ext_resource path="res://editor/VisualizerGrid.gd" type="Script" id=3]
[ext_resource path="res://editor/visualizers/3D/Visualizer3D_UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://editor/visualizers/PhotoBoothFlagsMenu.gd" type="Script" id=5]

[node name="VisualizerGrid" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapsContainer" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 600.0
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 16

[node name="AlbedoMap" parent="MapsContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 189.0

[node name="HeightMap" parent="MapsContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 205.0
margin_right = 150.0
margin_bottom = 394.0
type = 1

[node name="NormalMap" parent="MapsContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 410.0
margin_right = 150.0
margin_bottom = 600.0
type = 2

[node name="VisualizersContainer" type="Control" parent="."]
margin_left = 162.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Split" type="VSplitContainer" parent="VisualizersContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visualizer2D_UI" parent="VisualizersContainer/Split" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 862.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Visualizer3D_UI" parent="VisualizersContainer/Split" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 306.0
margin_right = 862.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PhotoBoothFlagsMenu" type="MenuButton" parent="VisualizersContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.0
margin_bottom = 20.0
text = "Options"
flat = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
